# RepoAI

./: CONTRIBUTING.md  LICENSE  README.md  texto.md
Algoritmos-geneticos/: Algoritmos_geneticos.md  LICENCE  README.md
Fine-Tuning de LLMs com QLoRA/: README.md
LinearRegression/: README.md
LogisticRegression/: README.md
MPPT-PSO-DMR/: README.mb  README.md
Reconhecimento-Facial/: README.md
SAC aprimorado com MuJoCo ensinando um humanoide a andar/: README.md  pyproject.toml  requirements.txt
SAC aprimorado com MuJoCo ensinando um humanoide a andar/configs/: bullet_humanoid.yaml  default.yaml  mujoco_humanoid.yaml  mujoco_walker2d.yaml  sweep_small.yaml
SAC aprimorado com MuJoCo ensinando um humanoide a andar/sac_rl/: __init__.py  run_eval.py  run_sweep.py  run_train.py
SAC aprimorado com MuJoCo ensinando um humanoide a andar/sac_rl/algo/: __init__.py  networks.py  replay_buffer.py  sac_agent.py  utils.py
SAC aprimorado com MuJoCo ensinando um humanoide a andar/sac_rl/envs/: __init__.py  make_env.py  wrappers.py
SAC aprimorado com MuJoCo ensinando um humanoide a andar/sac_rl/exp/: diagnostics.py  trainer.py
SAC aprimorado com MuJoCo ensinando um humanoide a andar/scripts/: install_cpu.sh  install_gpu.sh  viewer.py
SAC aprimorado com MuJoCo ensinando um humanoide a andar/tests/: test_alpha_tuning.py  test_determinism.py  test_env_wrappers.py  test_nstep.py  test_replay_buffer.py
Transfer_learning_ fine_tuning/: LICENSE  README.md
algoritmos_geneticos/: README.md
code/: acertando uma string.md  readme.md
content/: capa
cv_SCAlex/: README.md  (+1 more)
(+1870 files in other folders)
